--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="ConfigParser.h" />
     <ClInclude Include="Datum.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Section.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -162,6 +163,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="IGME-451_RegEx_HW.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
