--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Datum.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -50,5 +53,10 @@
     <ClCompile Include="Datum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="IGME-451_RegEx_HW.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
