--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{F5CA6AE6-1D35-4FB8-817C-E20F858389B7}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>IGME451_RegEx_HW</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="..\..\HW3_Ex_Config.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
