--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ConfigVar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
