--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{F5CA6AE6-1D35-4FB8-817C-E20F858389B7}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>IGME451_RegEx_HW</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
