--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
@@ -40,6 +40,12 @@
     <ClInclude Include="ConfigVar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DatumBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DatumList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -55,6 +61,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Datum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DatumBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DatumList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
