ConfigVar is now a static class...

--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConfigParser.cpp" />
+    <ClCompile Include="ConfigVar.cpp" />
     <ClCompile Include="Datum.cpp" />
     <ClCompile Include="DatumBase.cpp" />
     <ClCompile Include="DatumList.cpp" />
