--- a/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
+++ b/IGME-451_RegEx_HW/IGME-451_RegEx_HW.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="DatumList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConfigVar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="IGME-451_RegEx_HW.rc">
